objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Master_Training_Session__c</fullName>
        <label>Master Training Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Attendees (Master Training Session)</relationshipLabel>
        <relationshipName>Attendees1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_Addresses</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX( Email__c ,&quot;[a-z A-Z 0-9._%-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}&quot; ))</errorConditionFormula>
        <errorMessage>Use right Email format.</errorMessage>
    </validationRules>
</CustomObject>